public/core/v0.16/_sources/reference/tmlt/core/utils/index.rst.txt



************
utils
************

.. py:module:: tmlt.core.utils

.. autoapi-nested-parse::

   Utilities.


Modules
=======

.. list-table::

   * - :mod:`.arb`
     - Arblib wrapper using ctypes.
   * - :mod:`.cleanup`
     - Cleanup functions for Tumult Core.
   * - :mod:`.configuration`
     - Configuration properties for Tumult Core.
   * - :mod:`.distributions`
     - Probability functions for distributions commonly used in differential privacy.
   * - :mod:`.exact_number`
     - Utilities for using exact representations of real numbers.
   * - :mod:`.grouped_dataframe`
     - Grouped DataFrame aware of group keys when performing aggregations.
   * - :mod:`.join`
     - Utilities related to joining dataframes.
   * - :mod:`.misc`
     - Miscellaneous helper functions and classes.
   * - :mod:`.parameters`
     - Helper functions for selecting component parameters.
   * - :mod:`.prdp`
     - Floating-point safe utility functions for per-record diffential privacy.
   * - :mod:`.testing`
     - Utilities for testing.
   * - :mod:`.truncation`
     - Functions for truncating Spark DataFrames.
   * - :mod:`.type_utils`
     - Helpers for type introspection and type-checking.
   * - :mod:`.validation`
     - Utilities for checking the inputs to components.

.. toctree::
   :hidden:

   arb/index.rst
   cleanup/index.rst
   configuration/index.rst
   distributions/index.rst
   exact_number/index.rst
   grouped_dataframe/index.rst
   join/index.rst
   misc/index.rst
   parameters/index.rst
   prdp/index.rst
   testing/index.rst
   truncation/index.rst
   type_utils/index.rst
   validation/index.rst





